<resources>
    <string name="app_name">AST Stella</string>

    <!--main activity strings-->
    <string name="header_info">"1: Take picture 2: Sign waiver 3: Submit!"</string>
    <string name="footer_info">"www.astpos.com © 2018"</string>


    <!--signature parameters-->
    <string name="hint_sign">Get Signature</string>
    <string name="sign_here_title">Sign Here</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_save">Accept</string>


    <!--picture parameters-->
    <string name="btnIntendB">Take (big) Picture</string>
    <string name="btnIntendS">Take Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>


    <!--settings name strings-->
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="checkbox_text">I understand that any changes may reflect the device performance</string>
    <string name="user_email_pass">Member Email Pass</string>
    <string name="user_pass_data">password</string>
    <string name="user_email">User Email Account</string>
    <string name="user_email_data">myemail@gmail.com</string>
    <string name="settings_title">Administrator Settings</string>
    <string name="business_name">Business Name</string>
    <string name="business_name_data">AST TEST</string>
    <string name="server_ip">Server IP Address</string>
    <string name="server_ip_data">xxx.xxx.xxx.xxx</string>
    <string name="server_pass">Server Password</string>
    <string name="server_pass_data">password</string>
    <string name="spinner_name">Waiver Template</string>


    <!--transaction array-->
    <string-array name="transactions_arrays">
        <item>Waiver 1*</item>
        <item>Waiver 2*</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <!--menu strings-->
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_refresh">Refresh</string>

    <!--popup strings-->
    <string name="ok">OK</string>
    <string name="status">Status</string>
    <string name="updated">Updated!</string>
    <string name="time_out_prompt">Please check connectivity</string>
    <string name="connection_err">Connection error</string>
    <string name="reenter_phone">Please enter phone number!</string>
    <string name="complete_form">Please complete form: take a picture and sign waver!</string>
    <string name="wrong_pass">Wrong Password. Please try again!</string>
    <string name="type_pass">Type Your Password : </string>

</resources>

