    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        >

        <!-- "Mark Favorite", should appear as action button if possible -->
        <item
            android:id="@+id/action_title"
            android:title=""
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"
            app:showAsAction="never"/>
        <item android:id="@+id/action_refresh"
            android:orderInCategory="101"
            android:title="@string/action_refresh"
            android:icon="@drawable/ic_refresh_black_24dp"
            app:showAsAction="never" />
        <item android:id="@+id/action_exit"
            android:orderInCategory="102"
            android:title="@string/action_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            app:showAsAction="never" />

    </menu>
