<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="visible">

    <ProgressBar
        android:id="@+id/indeterminateBar"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayoutSettingsMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkSettings"
            android:text="@string/settings_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size"
            android:gravity="center"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/table_borders"
            android:padding="@dimen/textview_padding" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/business_name"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/borderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/business_name"/>
                <EditText
                    android:id="@+id/business_name_data"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:hint="@string/business_name_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/server_ip"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/borderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/server_ip"/>
                <EditText
                    android:id="@+id/server_ip_data"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."
                    android:hint="@string/server_ip_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/server_pass"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/borderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/server_pass"/>
                <EditText
                    android:id="@+id/server_pass_data"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="textPassword"
                    android:hint="@string/server_pass_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/transaction_name_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/borderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/spinner_name"/>
                <Spinner
                    android:id="@+id/transaction_name"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:entries="@array/transactions_arrays"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/user_email_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/borderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/user_email"/>
                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="textEmailAddress"
                    android:hint="@string/user_email_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/user_pass_lbl"
                    android:layout_width="@dimen/weight_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders"
                    android:textColor="@color/borderLineColor"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/user_email_pass"/>
                <EditText
                    android:id="@+id/user_pass"
                    android:layout_width="@dimen/border_width"
                    android:layout_weight="1"
                    android:background="@drawable/table_borders_edit"
                    android:textSize="@dimen/textview_padding"
                    android:inputType="textPassword"
                    android:hint="@string/user_pass_data"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding" />
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/checkbox_text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/button_grey"
                android:padding="@dimen/button_padding"
                android:layout_marginEnd="@dimen/button_padding"
                android:text="@string/cancel_text"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/save_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/button_green"
                android:padding="@dimen/button_padding"
                android:layout_marginStart="@dimen/button_padding"
                android:text="@string/save_text"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
